<resources>
    <string name="app_name">MyDearMechanic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Dashboard">Dashboard</string>
    <string name="MyProfile">MyProfile</string>
    <string name="Servicerequest">Servicerequest</string>
    <string name="Aboutus">Aboutus</string>
    <string name="Sharethisapp">Share this app</string>
    <string name="Rules">Rules and Regulation</string>
    <string name="Language">Language</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>